--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -21,8 +21,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link nav-download" id="download_btn_top" href="downloads">Download</a>
-                    <a class="nav-item nav-link" href="http://docs.conan.io/" target="_blank">Docs</a>
-                    <a class="nav-item nav-link" href="http://blog.conan.io/" target="_blank">Blog</a>
+                    <a class="nav-item nav-link" href="https://docs.conan.io/" target="_blank">Docs</a>
+                    <a class="nav-item nav-link" href="https://blog.conan.io/" target="_blank">Blog</a>
                 </div>
                 <div class="social-icons">
                     <a href="https://twitter.com/conan_io" target="_blank">
@@ -101,8 +101,8 @@ The look and feel of the Service is copyright ©2015 Conan. All rights reserved.
             <div class="col-6 col-sm-3 col-xl-2">
                 <ul>
                     <li><span class="txt-green">Resources</span></li>
-                    <li><a href="http://docs.conan.io/">Docs</a></li>
-                    <li><a href="http://blog.conan.io/">Blog</a></li>
+                    <li><a href="https://docs.conan.io/">Docs</a></li>
+                    <li><a href="https://blog.conan.io/">Blog</a></li>
                 </ul>
             </div>
             <div class="col-6 col-sm-3 col-xl-2">
