--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -81,7 +81,7 @@ Except for material in the public domain under copyright law, all material conta
 
 None of the material contained on Conan.io Website may be reverse-engineered, disassembled, decompiled, transcribed, stored in a retrieval system, translated into any language or computer language, retransmitted in any form or by any means (electronic, mechanical, photo reproduction, recordation or otherwise), resold or redistributed without the prior written consent of Conan.io Website. Violation of this provision may result in severe civil and criminal penalties.
 
-The look and feel of the Service is copyright ©2015 Conan. All rights reserved. You may not duplicate, copy, or reuse any portion of the HTML/CSS, Javascript, or visual design elements or concepts without express written permission from Conan
+The look and feel of the Service is copyright ©2018 JFrog. All rights reserved. You may not duplicate, copy, or reuse any portion of the HTML/CSS, Javascript, or visual design elements or concepts without express written permission from Conan
             </div>
         </div>
     </div>
