--- a/downloads.html
+++ b/downloads.html
@@ -107,7 +107,7 @@
 
                     <div class="boxed-content col-lg-3"><a
                             analytics-on="" data-action="download_installer" data-os="ubuntu" analytics-event="ubuntu" analytics-category="download_installer"
-                            href="https://bintray.com/conan/installers/download_file?file_path=conan-ubuntu-64_1_5_1.deb">
+                            href="https://dl.bintray.com/conan/installers/conan-ubuntu-64_1_5_1.deb">
                         <div class="boxed-content"><i class="fa fa-linux"></i>
                             <h2 class="boxed-content-title mt-4">Ubuntu/Debian x64 installer</h2>
                             <p>Download</p></div>
@@ -115,10 +115,10 @@
                     <div class="boxed-content col-lg-3">
                         <div class="boxed-content"><i class="fa fa-windows"></i>
                             <h2 class="boxed-content-title mt-4">Windows installer</h2>
-                            <p><a href="https://bintray.com/conan/installers/download_file?file_path=conan-win-64_1_5_1.exe"
+                            <p><a href="https://dl.bintray.com/conan/installers/conan-win-64_1_5_1.exe"
                             analytics-on="" analytics-event="windows" data-action="download_installer" data-os="windows"
                             analytics-category="download_installer">Download x86_64</a></p>
-                            <p><a href="https://bintray.com/conan/installers/download_file?file_path=conan-win-32_1_5_1.exe"
+                            <p><a href="https://dl.bintray.com/conan/installers/conan-win-32_1_5_1.exe"
                             analytics-on="" analytics-event="windows" data-action="download_installer" data-os="windows"
                             analytics-category="download_installer">Download x86</a></p>
                         </div>
