keysight logo and testimonial

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/logo/huawei.png" width="auto" height="119" alt="Huawei Logo">
                 </div>
                 <div class="user-box">
+                    <img src="img/logo/keysight.png" width="auto" height="119" alt="Keysight Logo">
+                </div>
+                <div class="user-box">
                     <img src="img/logo/melexis.png" width="auto" height="119" alt="Melexis Logo">
                 </div>
                 <div class="user-box">
@@ -284,6 +287,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-content">
+                        <div class="testimonial-title">Software Architect at Keysight Technologies</div>
+                        <div class="txt-green">Daniel Greidinger</div>
+                        <p class="quote">
+                            "What is best in life? Crushing your build times, driving your semantically versioned packages before you, and
+                            not hearing the lamentations of your developers"
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
                         <div class="testimonial-title">Sr Devops Lead Engineer at Mercedes-Benz R&D</div>
                         <div class="txt-green">Siva Mandadi</div>
                         <p class="quote">
@@ -321,7 +334,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             we depend on are built or provided (CMake, autotools, pre-compiled binaries). Conan gives
                             us the flexibility to manage C/C++ libraries of all kinds.
                             We have Conan fully integrated in our CI system and we do pretty advanced things with it. It definitely made our life easier.
-
                         </p>
                     </div>
                 </div>
