--- a/downloads.html
+++ b/downloads.html
@@ -82,7 +82,7 @@
                         <a ng-href="https://pypi.python.org/pypi/conan" data-action="download_installer" data-os="pypi_homepage" analytics-on="" analytics-event="pypi_homepage" analytics-category="download_installer" href="https://pypi.python.org/pypi/conan">
                             <img src="img/pypi.png" height="112px">
                             <h2 class="boxed-content-title mt-4">Any OS: From <b>pypi</b><br><a href="https://docs.conan.io/en/latest/installation.html#python2">(Python 3 preferred)</a></h2>
-                            <p> $ pip install conan</p>
+                            <p> <code>$ pip install conan</code></p>
                         </a>
                     </div>
                     <div class="boxed-content col-lg-4">
@@ -99,10 +99,12 @@
                 </div>
                 <div class="row justify-content-center mb-5">
                     <div class="boxed-content col-lg-3"><i class="fa fa-apple"></i>
-                        <h2 class="boxed-content-title mt-4">OSx: From Homebrew</h2> <a
+                        <h2 class="boxed-content-title mt-4">OSx: From Homebrew </h2>
+                        <p class="subtitle">(Maintained by the <br><a href="https://github.com/Homebrew/homebrew-core/"> Homebrew community</a>)</p>
+                        <a
                                 ng-href="http://brew.sh/" analytics-on="" data-action="download_installer" data-os="brew_homepage"
                                 analytics-event="brew_homepage" analytics-category="download_installer"
-                                href="http://brew.sh/"><p> $ brew install conan</p></a>
+                                href="http://brew.sh/"><p> <code>$ brew install conan</code></p></a>
                     </div>
 
                     <div class="boxed-content col-lg-3"><a
