--- a/downloads.html
+++ b/downloads.html
@@ -33,6 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link nav-download" href="downloads.html">Download</a>
+                    <a class="nav-item nav-link" href="https://bintray.com/conan/conan-center">Conan Center</a>
                     <a class="nav-item nav-link" href="https://docs.conan.io/" target="_blank">Docs</a>
                     <a class="nav-item nav-link" href="https://blog.conan.io/" target="_blank">Blog</a>
                 </div>
@@ -220,6 +221,7 @@
                 <ul>
                     <li><span class="txt-green">Get</span></li>
                     <li><a href="downloads.html" id="download_btn_bottom">Download</a></li>
+                    <li><a href="https://bintray.com/conan/conan-center">Conan Center</a></li>
                     <li><a href="https://github.com/conan-io/conan">GitHub</a></li>
                 </ul>
             </div>
