Conan center link

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link nav-download" id="download_btn_top" href="downloads.html">Download</a>
-                    <a class="nav-item nav-link" href="https://bintray.com/conan/conan-center">Conan Center</a>
                     <a class="nav-item nav-link" href="https://docs.conan.io/" target="_blank">Docs</a>
                     <a class="nav-item nav-link" href="https://blog.conan.io/" target="_blank">Blog</a>
+                    <a class="nav-item nav-link conan-center" href="https://bintray.com/conan/conan-center">
+                        <img src="img/bintray.png" width="20" height="26" /><span>conan-center</span>
+                    </a>
                 </div>
                 <div class="social-icons">
                     <a href="https://twitter.com/conan_io" target="_blank">
