Microblink logo and testimonial

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/logo/keysight.png" width="auto" height="119" alt="Keysight Logo">
                 </div>
                 <div class="user-box">
+                    <img src="img/logo/microblink.png" width="auto" height="119" alt="Microblink Logo">
+                </div>
+                <div class="user-box">
                     <img src="img/logo/melexis.png" width="auto" height="119" alt="Melexis Logo">
                 </div>
                 <div class="user-box">
@@ -295,6 +298,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <p class="quote">
                             "What is best in life? Crushing your build times, driving your semantically versioned packages before you, and
                             not hearing the lamentations of your developers"
+                        </p>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <div class="testimonial-content">
+                        <div class="testimonial-title">Compiler Whisperer at Microblink</div>
+                        <div class="txt-green">Nenad Mikša</div>
+                        <p class="quote">
+                            "Conan integration enabled a 10x reduction in our development compile-test cycle and release build times,
+                            enabling extra coding time for devs and much quicker BlinkID SDK releases. Organizing our codebase into multiple
+                            packages enabled us easier maintenance. On top of that, the dependency graph visualizer is great for every
+                            developer to see the overview of all modules/packages, as well as their individual contribution to the complete
+                            project."
                         </p>
                     </div>
                 </div>
