--- a/downloads.html
+++ b/downloads.html
@@ -135,9 +135,13 @@
                                                       data-action="download_installer"
                                                       href="https://aur.archlinux.org/packages/conan/"> <img
                                 src="img/arch.png" height="120px">
-                            <h2 class="boxed-content-title mt-4"><b>Arch AUR</b> package</h2>
-                            <p> $ pacaur -S conan</p></a>
-                            <p></p></div>
+                            <h2 class="boxed-content-title mt-4"><b>Arch AUR</b> package</h2></a>
+                            <p class="subtitle"> Not sure <a href="https://wiki.archlinux.org/index.php/Arch_User_Repository">how to use AUR</a>?</p>
+                            <a
+                                    ng-href="https://aur.archlinux.org/packages/conan/" analytics-on="" data-action="download_installer" data-os="arch_aur_homepage"
+                                    analytics-event="arch_aur_homepage" analytics-category="download_installer"
+                                    href="https://aur.archlinux.org/packages/conan/"><p> <code>$ yay -S conan</code></p></a>
+                        </div>
                     </div>
                 </div>
 
