add OpenROV logo to 'our users' section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/logo/microblink.png" width="auto" height="119" alt="Microblink Logo">
                 </div>
                 <div class="user-box">
+                    <img src="img/logo/openrov.png" width="auto" height="119" alt="OpenROV Logo">
+                </div>
+                <div class="user-box">
                     <img src="img/logo/melexis.png" width="auto" height="119" alt="Melexis Logo">
                 </div>
                 <div class="user-box">
