Add Meet Conan Team 2019 Banner

--- a/index.html
+++ b/index.html
@@ -409,6 +409,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col text-center">
+                <div id="conan-banner">
+                    <img src="img/conan-meet-the-team-2019.jpg" class="img-fluid" alt="Meet the Conan Team">
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
