#35 - HTML Validation Error fixes

--- a/downloads.html
+++ b/downloads.html
@@ -39,16 +39,16 @@
                 </div>
                 <div class="social-icons">
                     <a href="https://twitter.com/conan_io" target="_blank">
-                        <img src="img/twitter-icon.png" width="22" height="21" />
+                        <img src="img/twitter-icon.png" width="22" height="21" alt="Twitter" />
                     </a>
                     <a href="https://facebook.com/conan.io" target="_blank">
-                        <img src="img/facebook-icon.png" width="22" height="21" />
+                        <img src="img/facebook-icon.png" width="22" height="21" alt="Facebook" />
                     </a>
                     <a href="https://github.com/conan-io" target="_blank">
-                        <img src="img/github-icon.png" width="22" height="21" />
+                        <img src="img/github-icon.png" width="22" height="21" alt="GitHub" />
                     </a>
                     <a href="https://cpplang.now.sh/" target="_blank">
-                        <img src="img/slack-icon.png" width="22" height="21" />
+                        <img src="img/slack-icon.png" width="22" height="21" alt="Slack" />
                     </a>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                 <div class="row justify-content-center bggrey mr-md-0 pb-4">
                     <div class="boxed-content col-lg-4">
                         <a ng-href="https://pypi.python.org/pypi/conan" data-action="download_installer" data-os="pypi_homepage" analytics-on="" analytics-event="pypi_homepage" analytics-category="download_installer" href="https://pypi.python.org/pypi/conan">
-                            <img src="img/pypi.png" height="112px">
+                            <img src="img/pypi.png" height="112px" alt="Pypi">
                             <h2 class="boxed-content-title mt-4">Any OS: From <b>pypi</b><br><a href="https://docs.conan.io/en/latest/installation.html#python2">(Python 3 preferred)</a></h2>
                             <p> <code>$ pip install conan</code></p>
                         </a>
@@ -134,7 +134,7 @@
                                                       data-os="arch_aur_homepage"
                                                       data-action="download_installer"
                                                       href="https://aur.archlinux.org/packages/conan/"> <img
-                                src="img/arch.png" height="120px">
+                                src="img/arch.png" height="120px" alt="arch">
                             <h2 class="boxed-content-title mt-4"><b>Arch AUR</b> package</h2></a>
                             <p class="subtitle"> Not sure <a href="https://wiki.archlinux.org/index.php/Arch_User_Repository">how to use AUR</a>?</p>
                             <a
