--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <script src="slick/slick.min.js"></script>
+    <script src="js/scripts.js"></script>
     <script src="https://app-lon04.marketo.com/js/forms2/js/forms2.min.js"></script>
 </head>
 <body>
@@ -45,21 +45,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a class="nav-item nav-link" href="https://docs.conan.io/" target="_blank">Docs</a>
                     <a class="nav-item nav-link" href="https://blog.conan.io/" target="_blank">Blog</a>
                     <a class="nav-item nav-link conan-center" href="https://bintray.com/conan/conan-center">
-                        <img src="img/bintray.png" width="20" height="26" /><span>conan-center</span>
+                        <img src="img/bintray.png" width="20" height="26" alt="Conan Center on Bintray" /><span>conan-center</span>
                     </a>
                 </div>
                 <div class="social-icons">
                     <a href="https://twitter.com/conan_io" target="_blank">
-                        <img src="img/twitter-icon.png" width="22" height="21" />
+                        <img src="img/twitter-icon.png" width="22" height="21" alt="Twitter" />
                     </a>
                     <a href="https://facebook.com/conan.io" target="_blank">
-                        <img src="img/facebook-icon.png" width="22" height="21" />
+                        <img src="img/facebook-icon.png" width="22" height="21" alt="Facebook" />
                     </a>
                     <a href="https://github.com/conan-io" target="_blank">
-                        <img src="img/github-icon.png" width="22" height="21" />
+                        <img src="img/github-icon.png" width="22" height="21" alt="GitHub" />
                     </a>
                     <a href="https://cpplang.now.sh/" target="_blank">
-                        <img src="img/slack-icon.png" width="22" height="21" />
+                        <img src="img/slack-icon.png" width="22" height="21" alt="Slack" />
                     </a>
                 </div>
             </div>
@@ -109,52 +109,52 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row">
             <div class="col our-users-slider">
                 <div class="user-box">
-                    <img src="img/logo/pix4d.png" width="auto" height="119" alt="Pix4D Logo">
+                    <img src="img/logo/pix4d.png" width="160" height="119" alt="Pix4D Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/huawei.png" width="auto" height="119" alt="Huawei Logo">
+                    <img src="img/logo/huawei.png" width="160" height="119" alt="Huawei Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/keysight.png" width="auto" height="119" alt="Keysight Logo">
+                    <img src="img/logo/keysight.png" width="160" height="119" alt="Keysight Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/microblink.png" width="auto" height="119" alt="Microblink Logo">
+                    <img src="img/logo/microblink.png" width="160" height="119" alt="Microblink Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/openrov.png" width="auto" height="119" alt="OpenROV Logo">
+                    <img src="img/logo/openrov.png" width="160" height="119" alt="OpenROV Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/melexis.png" width="auto" height="119" alt="Melexis Logo">
+                    <img src="img/logo/melexis.png" width="160" height="119" alt="Melexis Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/mercedes2.png" width="auto" height="119"  alt="Mercedes-Benz Logo">
+                    <img src="img/logo/mercedes2.png" width="160" height="119"  alt="Mercedes-Benz Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/plex.png" width="auto" height="119" alt="Plex Logo">
+                    <img src="img/logo/plex.png" width="160" height="119" alt="Plex Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/arxan.png" width="auto" height="119" alt="Arxan Logo">
+                    <img src="img/logo/arxan.png" width="160" height="119" alt="Arxan Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/rheinmetall.png" width="auto" height="119" alt="Rheinmetall Logo">
+                    <img src="img/logo/rheinmetall.png" width="160" height="119" alt="Rheinmetall Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/bitprim.png" width="auto" height="119" alt="Bitprim Logo">
+                    <img src="img/logo/bitprim.png" width="160" height="119" alt="Bitprim Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/tanker.png" width="auto" height="119" alt="Tanker Logo">
+                    <img src="img/logo/tanker.png" width="160" height="119" alt="Tanker Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/khomp.png" width="auto" height="119" alt="Khomp Logo">
+                    <img src="img/logo/khomp.png" width="160" height="119" alt="Khomp Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/appanywhere.png" width="auto" height="119" alt="AppAnywhere Logo">
+                    <img src="img/logo/appanywhere.png" width="160" height="119" alt="AppAnywhere Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/zenaudio.png" width="auto" height="119" alt="Zenaudio.io Logo">
+                    <img src="img/logo/zenaudio.png" width="160" height="119" alt="Zenaudio.io Logo">
                 </div>
                 <div class="user-box">
-                    <img src="img/logo/poco.png" width="auto" height="119" alt="Poco C++ Libraries Logo">
+                    <img src="img/logo/poco.png" width="160" height="119" alt="Poco C++ Libraries Logo">
                 </div>
             </div>
         </div>
@@ -442,7 +442,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <input type="text" name="_gotcha" style="display:none" />
                 </div>
                 <div class="cu-form-right col-md-6">
-                    <textarea name="message" id="" cols="28" rows="5" placeholder="Message *" required></textarea>
+                    <textarea name="message" id="cu-msg" cols="28" rows="5" placeholder="Message *" required></textarea>
                 </div>
                 <div class="cu-form-row col-md-12 text-center">
                     <input name="terms" class="d-inline-flex" type="checkbox" id="terms_cu" value="" required>
