add nitro logo to webpage

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <img src="img/logo/keysight.png" width="160" height="119" alt="Keysight Logo">
                 </div>
                 <div class="user-box">
+                    <img src="img/logo/nitro.png" width="160" height="119" alt="Nitro Logo">
+                </div>
+                <div class="user-box">
                     <img src="img/logo/microblink.png" width="160" height="119" alt="Microblink Logo">
                 </div>
                 <div class="user-box">
