Add canonical tag to conan pages

--- a/downloads.html
+++ b/downloads.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <title>C/C++ Open Source Package Manager</title>
+    <link rel="canonical" href="https://conan.io/downloads" />
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
