--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <title>Conan.io - Terms and Conditions</title>
 
+    <link rel="canonical" href="https://conan.io/terms-conditions.html" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
