Add Star Conan on Github to Social icons

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <header class="conan-header bgc-blue">
     <div class="container header-container">
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand p-0" href="index.html"><img src="img/jfrog_conan_logo.png" width="320" class="d-inline-block align-top img-fluid" alt="Conan"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -56,12 +56,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="https://facebook.com/conan.io" target="_blank">
                         <img src="img/facebook-icon.png" width="22" height="21" alt="Facebook" />
                     </a>
-                    <a href="https://github.com/conan-io" target="_blank">
-                        <img src="img/github-icon.png" width="22" height="21" alt="GitHub" />
-                    </a>
                     <a href="https://cpplang.now.sh/" target="_blank">
                         <img src="img/slack-icon.png" width="22" height="21" alt="Slack" />
                     </a>
+                    <a href="https://github.com/conan-io" target="_blank">
+                        <img src="img/github-icon.png" width="22" height="21" alt="GitHub" />
+                    </a>
+                    <div class="github-star d-inline position-relative">
+                        <a class="github-button" href="https://github.com/conan-io/conan" data-icon="octicon-star" aria-label="Star conan-io/conan on GitHub">
+                            Star
+                        </a>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -512,7 +517,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
 </footer>
-
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WK44ZFM" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
