--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -22,7 +22,7 @@
 <body>
 <header class="conan-header bgc-blue">
     <div class="container header-container">
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand p-0" href="index.html"><img src="img/jfrog_conan_logo.png" width="320" class="d-inline-block align-top img-fluid" alt="Conan"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,12 +41,17 @@
                     <a href="https://facebook.com/conan.io" target="_blank">
                         <img src="img/facebook-icon.png" width="22" height="21" />
                     </a>
-                    <a href="https://github.com/conan-io" target="_blank">
-                        <img src="img/github-icon.png" width="22" height="21" />
-                    </a>
                     <a href="https://cpplang.now.sh/" target="_blank">
                         <img src="img/slack-icon.png" width="22" height="21" />
                     </a>
+                    <a href="https://github.com/conan-io" target="_blank">
+                        <img src="img/github-icon.png" width="22" height="21" />
+                    </a>
+                    <div class="github-star d-inline position-relative">
+                    <a class="github-button" href="https://github.com/conan-io/conan" data-icon="octicon-star" aria-label="Star conan-io/conan on GitHub">
+                        Star
+                    </a>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -138,6 +143,7 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WK44ZFM" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
