Update 'Star on Github button'

--- a/downloads.html
+++ b/downloads.html
@@ -45,12 +45,22 @@
                     <a href="https://facebook.com/conan.io" target="_blank">
                         <img src="img/facebook-icon.png" width="22" height="21" alt="Facebook" />
                     </a>
-                    <a href="https://github.com/conan-io" target="_blank">
-                        <img src="img/github-icon.png" width="22" height="21" alt="GitHub" />
-                    </a>
                     <a href="https://cpplang.now.sh/" target="_blank">
                         <img src="img/slack-icon.png" width="22" height="21" alt="Slack" />
                     </a>
+                    <a href="https://github.com/conan-io" target="_blank">
+                        <img src="img/github-icon.png" width="22" height="21" alt="GitHub" />
+                    </a>
+                    <div class="github-star d-inline position-relative">
+                        <a class="github-button" target="_blank" href="https://github.com/conan-io/conan" aria-label="Star conan-io/conan on GitHub">
+                            <span class="gh-button__stat">
+                                <svg class="gh-button__icon gh-button__icon--star" viewbox="0 0 896 1024">
+                                    <path d="M896 384l-313.5-40.781L448 64 313.469 343.219 0 384l230.469 208.875L171 895.938l277-148.812 277.062 148.812L665.5 592.875 896 384z" />
+                                </svg>
+                                <span>Star</span>
+                            </span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </nav>
