--- a/index.html
+++ b/index.html
@@ -62,8 +62,13 @@
                         <img src="img/github-icon.png" width="22" height="21" alt="GitHub" />
                     </a>
                     <div class="github-star d-inline position-relative">
-                        <a class="github-button" href="https://github.com/conan-io/conan" data-icon="octicon-star" aria-label="Star conan-io/conan on GitHub">
-                            Star
+                        <a class="github-button" target="_blank" href="https://github.com/conan-io/conan" aria-label="Star conan-io/conan on GitHub">
+                            <span class="gh-button__stat">
+                                <svg class="gh-button__icon gh-button__icon--star" viewbox="0 0 896 1024">
+                                    <path d="M896 384l-313.5-40.781L448 64 313.469 343.219 0 384l230.469 208.875L171 895.938l277-148.812 277.062 148.812L665.5 592.875 896 384z" />
+                                </svg>
+                                <span>Star</span>
+                            </span>
                         </a>
                     </div>
                 </div>
@@ -516,6 +521,5 @@
         </div>
     </div>
 </footer>
-<script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
