--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -48,8 +48,13 @@
                         <img src="img/github-icon.png" width="22" height="21" />
                     </a>
                     <div class="github-star d-inline position-relative">
-                        <a class="github-button" href="https://github.com/conan-io/conan" data-icon="octicon-star" aria-label="Star conan-io/conan on GitHub">
-                            Star
+                        <a class="github-button" target="_blank" href="https://github.com/conan-io/conan" aria-label="Star conan-io/conan on GitHub">
+                            <span class="gh-button__stat">
+                                <svg class="gh-button__icon gh-button__icon--star" viewbox="0 0 896 1024">
+                                    <path d="M896 384l-313.5-40.781L448 64 313.469 343.219 0 384l230.469 208.875L171 895.938l277-148.812 277.062 148.812L665.5 592.875 896 384z" />
+                                </svg>
+                                <span>Star</span>
+                            </span>
                         </a>
                     </div>
                 </div>
@@ -261,7 +266,6 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script async defer src="https://buttons.github.io/buttons.js"></script>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WK44ZFM" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
