--- a/index.html
+++ b/index.html
@@ -422,11 +422,35 @@
                 </div>
             </div>
         </div>
+    </div>
+</section>
+<section class="meet-the-conan-team">
+    <div class="container section-content">
         <div class="row">
-            <div class="col text-center">
-                <div id="conan-banner">
-                    <img src="img/conan-meet-the-team-2019.jpg" class="img-fluid" alt="Meet the Conan Team">
-                </div>
+            <div class="col-12">
+                <h2 class="text-center">Meet the Conan team</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-lg-0 text-center">
+                <a href="https://corecpp.org/" target="_blank" class="meet-conan-link">
+                    <img src="img/conan_corec_2019.png" width="270" height="270" class="img-fluid" />
+                </a>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-lg-0 text-center">
+                <a href="https://www.italiancpp.org/event/itcppcon19/" target="_blank" class="meet-conan-link">
+                    <img src="img/conan_IT_2019.png" width="270" height="270" class="img-fluid" />
+                </a>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-sm-0 text-center">
+                <a href="https://cppcon.org/" target="_blank" class="meet-conan-link">
+                    <img src="img/conan_cpp_2019.png" width="270" height="270" class="img-fluid" />
+                </a>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-sm-0 text-center">
+                <a href="https://meetingcpp.com/" target="_blank" class="meet-conan-link">
+                    <img src="img/conan_Meeting_2019.png" width="270" height="270" class="img-fluid" />
+                </a>
             </div>
         </div>
     </div>
