--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         </div>
         <div class="row">
             <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-lg-0 text-center">
-                <a href="https://corecpp.org/" target="_blank" class="meet-conan-link">
+                <a href="https://corecpp.org/schedule/#session-14" target="_blank" class="meet-conan-link">
                     <img src="img/conan_corec_2019.png" width="270" height="270" class="img-fluid" />
                 </a>
             </div>
@@ -443,7 +443,7 @@
                 </a>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-sm-0 text-center">
-                <a href="https://cppcon.org/" target="_blank" class="meet-conan-link">
+                <a href="https://cppcon.org/class-2019-conan/" target="_blank" class="meet-conan-link">
                     <img src="img/conan_cpp_2019.png" width="270" height="270" class="img-fluid" />
                 </a>
             </div>
