--- a/index.html
+++ b/index.html
@@ -431,12 +431,7 @@
                 <h2 class="text-center">Meet the Conan team</h2>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-lg-0 text-center">
-                <a href="https://corecpp.org/schedule/#session-14" target="_blank" class="meet-conan-link">
-                    <img src="img/conan_corec_2019.png" width="270" height="270" class="img-fluid" />
-                </a>
-            </div>
+        <div class="row justify-content-center">
             <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-lg-0 text-center">
                 <a href="https://www.italiancpp.org/event/itcppcon19/" target="_blank" class="meet-conan-link">
                     <img src="img/conan_IT_2019.png" width="270" height="270" class="img-fluid" />
