Add JFrog SwampUp Banner to conan frontpage

--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
 </header>
 
 <section id="hero" style="background: url('img/hero.jpg') center center no-repeat;background-size: cover;">
+    <div class="container-fluid swampup-banner-container d-none d-lg-block">
+        <div class="row">
+            <div class="col-12 text-center py-2">
+                <a href="https://swampup.jfrog.com/" target="_blank">
+                    <img src="img/Conan_Su.svg" class="img-fluid" alt="JFrog SwamUp 2019" />
+                </a>
+            </div>
+        </div>
+    </div>
     <div class="container section-content">
         <div class="row">
             <div class="col text-center">
