--- a/index.html
+++ b/index.html
@@ -430,21 +430,16 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-lg-0 text-center">
-                <a href="https://www.italiancpp.org/event/itcppcon19/" target="_blank" class="meet-conan-link">
-                    <img src="img/conan_IT_2019.png" width="270" height="270" class="img-fluid" />
-                </a>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-sm-0 text-center">
+            <div class="col-12 col-lg-9 pb-4 pb-lg-0 text-center">
                 <a href="https://cppcon.org/class-2019-conan/" target="_blank" class="meet-conan-link">
-                    <img src="img/conan_cpp_2019.png" width="270" height="270" class="img-fluid" />
+                    <img src="img/conan-workshop-colorado-09-2019.jpg" width="1141" height="316" alt="Conan - Become a Barbarian 2019 Colorado" class="img-fluid" />
                 </a>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3 pb-4 pb-sm-0 text-center">
-                <a href="https://meetingcpp.com/" target="_blank" class="meet-conan-link">
-                    <img src="img/conan_Meeting_2019.png" width="270" height="270" class="img-fluid" />
-                </a>
-            </div>
+            <!--<div class="col-12 col-sm-6 col-lg-3 pb-4 pb-sm-0 text-center">-->
+                <!--<a href="https://meetingcpp.com/" target="_blank" class="meet-conan-link">-->
+                    <!--<img src="img/conan-meeting_2019-berlin.png" width="270" height="270" class="img-fluid" />-->
+                <!--</a>-->
+            <!--</div>-->
         </div>
     </div>
 </section>
