Adding new Banner - Berlin 2019 Meeting C++

--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-12 col-lg-9 pb-4 pb-lg-0 text-center">
-                <a href="https://cppcon.org/class-2019-conan/" target="_blank" class="meet-conan-link">
-                    <img src="img/conan-workshop-colorado-09-2019.jpg" width="1141" height="316" alt="Conan - Become a Barbarian 2019 Colorado" class="img-fluid" />
+                <a href="https://meetingcpp.com/" target="_blank" class="meet-conan-link">
+                    <img src="img/conan-meet-the-team-berlin-2019.png" width="1174" height="365" alt="Conan - Meet the team - Berlin 2019" class="img-fluid" />
                 </a>
             </div>
             <!--<div class="col-12 col-sm-6 col-lg-3 pb-4 pb-sm-0 text-center">-->
