--- a/downloads.html
+++ b/downloads.html
@@ -159,7 +159,7 @@
             </div>
             <div class="col-lg-3 download-artifactory-ce">
                 <div class="row">
-                    <div class="col text-center pb-2 version">JFrog Artifactory 6.9</div>
+                    <div class="col text-center pb-2 version">JFrog Artifactory (latest version)</div>
                 </div>
                 <div class="row">
                     <div class="col bgc-green-ce text-center text-white download-sub-header">
