--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     <a class="nav-item nav-link nav-download" id="download_btn_top" href="downloads.html">Download</a>
                     <a class="nav-item nav-link" href="https://docs.conan.io/" target="_blank">Docs</a>
                     <a class="nav-item nav-link" href="https://blog.conan.io/" target="_blank">Blog</a>
-                    <a class="nav-item nav-link conan-center" href="https://bintray.com/conan/conan-center">
-                        <img src="img/bintray.png" width="20" height="26" alt="Conan Center on Bintray" /><span>conan-center</span>
+                    <a class="nav-item nav-link conan-center" href="https://center.conan.io">
+                        <img src="img/conan-center-logo.png" width="20" height="26" alt="Conan Center central repository" /><span>conan-center</span>
                     </a>
                 </div>
                 <div class="social-icons">
@@ -249,7 +249,9 @@
                 <p>JFrog Bintray provides free public hosting for all your open
                 source packages. Create your own Conan repositories
                 in your <a href="https://bintray.com/signup/oss">Bintray OSS account</a>, upload your packages
-                and share them. <a href="https://bintray.com/conan/conan-center">Conan-center</a>,
+                and share them.                     <a class="" href="https://center.conan.io">
+                        conan-center
+                    </a>,
                 is a reviewed/curated central public repository, that’s configured by default
                 in the Conan client.</p>
             </div>
@@ -503,7 +505,7 @@
                 <ul>
                     <li><span class="txt-green">Get</span></li>
                     <li><a href="downloads.html" id="download_btn_bottom">Download</a></li>
-                    <li><a href="https://bintray.com/conan/conan-center">Conan Center</a></li>
+                    <li><a class="" href="https://center.conan.io">conan-center</a></li>
                     <li><a href="https://github.com/conan-io/conan">GitHub</a></li>
                 </ul>
             </div>
