--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-12 col-lg-9 pb-4 pb-lg-0 text-center">
-                <a href="https://meetingcpp.com/" target="_blank" class="meet-conan-link">
-                    <img src="img/conan-meet-the-team-berlin-2019.png" width="1174" height="365" alt="Conan - Meet the team - Berlin 2019" class="img-fluid" />
+            <div class="col-12 col-lg-10 pb-4 pb-lg-0 text-center">
+                <a href="https://https://conandays.conan.io//" target="_blank" class="meet-conan-link">
+                    <img src="img/conan-days-madrid-2020.png" width="1140" height="340" alt="Conan Days - Gathering the tribes - March 19-20 Madrid" class="img-fluid" />
                 </a>
             </div>
             <!--<div class="col-12 col-sm-6 col-lg-3 pb-4 pb-sm-0 text-center">-->
