--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10 pb-4 pb-lg-0 text-center">
-                <a href="https://https://conandays.conan.io//" target="_blank" class="meet-conan-link">
+                <a href="https://conandays.conan.io" target="_blank" class="meet-conan-link">
                     <img src="img/conan-days-madrid-2020.png" width="1140" height="340" alt="Conan Days - Gathering the tribes - March 19-20 Madrid" class="img-fluid" />
                 </a>
             </div>
