Links to bintray

--- a/downloads.html
+++ b/downloads.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link nav-download" href="downloads.html">Download</a>
-                    <a class="nav-item nav-link conan-center" href="https://center.conan.io">
+                    <a class="nav-item nav-link conan-center" href="https://bintray.com/conan/conan-center">
                         <img src="img/conan-center-logo.png" width="20" height="26" alt="Conan Center central repository" /><span>conan-center</span>
                     </a>
                     <a class="nav-item nav-link" href="https://docs.conan.io/" target="_blank">Docs</a>
@@ -240,7 +240,7 @@
                 <ul>
                     <li><span class="txt-green">Get</span></li>
                     <li><a href="downloads.html" id="download_btn_bottom">Download</a></li>
-                    <li><a class="" href="https://center.conan.io">conan-center</a></li>
+                    <li><a class="" href="https://bintray.com/conan/conan-center">conan-center</a></li>
                     <li><a href="https://github.com/conan-io/conan">GitHub</a></li>
                 </ul>
             </div>
