--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a class="nav-item nav-link nav-download" id="download_btn_top" href="downloads.html">Download</a>
                     <a class="nav-item nav-link" href="https://docs.conan.io/" target="_blank">Docs</a>
                     <a class="nav-item nav-link" href="https://blog.conan.io/" target="_blank">Blog</a>
-                    <a class="nav-item nav-link conan-center" href="https://center.conan.io">
+                    <a class="nav-item nav-link conan-center" href="https://bintray.com/conan/conan-center">
                         <img src="img/conan-center-logo.png" width="20" height="26" alt="Conan Center central repository" /><span>conan-center</span>
                     </a>
                 </div>
@@ -251,7 +251,7 @@
                 <p>JFrog Bintray provides free public hosting for all your open
                 source packages. Create your own Conan repositories
                 in your <a href="https://bintray.com/signup/oss">Bintray OSS account</a>, upload your packages
-                and share them.                     <a class="" href="https://center.conan.io">
+                and share them.                     <a class="" href="https://bintray.com/conan/conan-center">
                         conan-center
                     </a>,
                 is a reviewed/curated central public repository, that’s configured by default
@@ -507,7 +507,7 @@
                 <ul>
                     <li><span class="txt-green">Get</span></li>
                     <li><a href="downloads.html" id="download_btn_bottom">Download</a></li>
-                    <li><a class="" href="https://center.conan.io">conan-center</a></li>
+                    <li><a class="" href="https://bintray.com/conan/conan-center">conan-center</a></li>
                     <li><a href="https://github.com/conan-io/conan">GitHub</a></li>
                 </ul>
             </div>
