--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="slick/slick.min.js"></script>
     <script src="js/scripts.js"></script>
-    <script src="https://app-lon04.marketo.com/js/forms2/js/forms2.min.js"></script>
+    <script src="slick/slick.min.js" async></script>
+    <script src="https://app-lon04.marketo.com/js/forms2/js/forms2.min.js" defer></script>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
@@ -439,11 +439,6 @@
                     <img src="img/conan-days-madrid-2020.png" width="1140" height="340" alt="Conan Days - Gathering the tribes - March 19-20 Madrid" class="img-fluid" />
                 </a>
             </div>
-            <!--<div class="col-12 col-sm-6 col-lg-3 pb-4 pb-sm-0 text-center">-->
-                <!--<a href="https://meetingcpp.com/" target="_blank" class="meet-conan-link">-->
-                    <!--<img src="img/conan-meeting_2019-berlin.png" width="270" height="270" class="img-fluid" />-->
-                <!--</a>-->
-            <!--</div>-->
         </div>
     </div>
 </section>
