--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -30,8 +30,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link nav-download" id="download_btn_top" href="downloads">Download</a>
-                    <a class="nav-item nav-link conan-center" href="https://bintray.com/conan/conan-center">
-                        <img src="img/conan-center-logo.png" width="20" height="26" alt="Conan Center central repository" /><span>conan-center</span>
+                    <a class="nav-item nav-link conan-center" href="/center">
+                        <img src="img/conan-center-logo.png" width="20" height="26" alt="Conan Center central repository" /><span>Conan Center</span>
                     </a>
                     <a class="nav-item nav-link" href="https://docs.conan.io/" target="_blank">Docs</a>
                     <a class="nav-item nav-link" href="https://blog.conan.io/" target="_blank">Blog</a>
