add stg and prod builds

--- a/downloads.html
+++ b/downloads.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link nav-download" href="downloads.html">Download</a>
-                    <a class="nav-item nav-link conan-center" a href="/center">
+                    <a class="nav-item nav-link conan-center" href="https://conan.io/center">
                         <img src="img/conan-center-logo.png" width="20" height="26" alt="Conan Center central repository" /><span>Conan Center</span>
                     </a>
                     <a class="nav-item nav-link" href="https://docs.conan.io/" target="_blank">Docs</a>
