--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a class="nav-item nav-link nav-download" id="download_btn_top" href="downloads.html">Download</a>
                     <a class="nav-item nav-link" href="https://docs.conan.io/" target="_blank">Docs</a>
                     <a class="nav-item nav-link" href="https://blog.conan.io/" target="_blank">Blog</a>
-                    <a class="nav-item nav-link conan-center" href="https://conan.io/center">
+                    <a class="nav-item nav-link conan-center" href="/center">
                         <img src="img/conan-center-logo.png" width="20" height="26" alt="Conan Center central repository" /><span>Conan Center</span>
                     </a>
                 </div>
