--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                 <p>JFrog Bintray provides free public hosting for all your open
                 source packages. Create your own Conan repositories
                 in your <a href="https://bintray.com/signup/oss">Bintray OSS account</a>, upload your packages
-                and share them.                     <a class="" href="https://bintray.com/conan/conan-center">
-                        conan-center
+                and share them.                     <a class="" href="/center">
+                        Conan Center
                     </a>,
                 is a reviewed/curated central public repository, that’s configured by default
                 in the Conan client.</p>
@@ -502,7 +502,7 @@
                 <ul>
                     <li><span class="txt-green">Get</span></li>
                     <li><a href="downloads.html" id="download_btn_bottom">Download</a></li>
-                    <li><a class="" href="https://bintray.com/conan/conan-center">conan-center</a></li>
+                    <li><a class="" href="/center">Conan Center</a></li>
                     <li><a href="https://github.com/conan-io/conan">GitHub</a></li>
                 </ul>
             </div>
